fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
